Complete CSS + JS Clock chanllege

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
       "stylelint-order"
     ],
     "rules": {
+      "value-list-comma-newline-after": null,
       "order/order": [
         "dollar-variables",
         "custom-properties",
